docs(claude): 里程碑 1.6 文档同步——raw 接缝/溢写组件/运行与基准说明
- replication/CLAUDE.md 全面改写：raw 接缝与 DecodedMessageBridge 双契约、
  TransactionAssembler 新形态（MEMORY/SPILLED 混合桶/连续段/低水位）、
  SpillConfig/SpoolFrame/PayloadUnit/MessageSpool/VersionedRelationRegistry/
  BucketReplayer 各一节、SessionHarness 双轨录制
- 根 CLAUDE.md：里程碑状态更新至 1.6；运行 Main 补 -Dvb.spill.* 参数表、
  --add-opens JVM 清单、spill 目录重启清空属预期；测试节补 AssemblySpillTest
  四场景/BenchCorpusRecordTest/JMH 运行方式
- 文档债清偿：spec §5 单区间改连续段记账（§2/§3/§4.3 同步清扫）、§2 定长帧头
  改变长（9/13 字节）、§9.2 回放过滤措辞对齐 live 分流+abortedSubxids、
  §3 MessageSpool 行签名对齐实现、§8.3 基准源码根改 src/jmh/java；
  benchmarks-baseline.md peekRoute 换算笔误改 peek/decode 比值、补模块根目录
  运行说明；SessionHarness 等长契约收敛为"无解码异常时"；Main 类 javadoc
  摘除陈旧里程碑标签
- pom surefire argLine 修正 no-op 项：jdk.unsupported/jdk.internal.misc →
  jdk.unsupported/sun.misc（MessageSpoolTest 定点 4/4 绿 + mvn clean test
  147/147 全绿验证）

Co-Authored-By: Claude <noreply@anthropic.com>